Thu Jun 27 11:49:57 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSTextField.m ([-textDidEndEditing:]): Set _text_object
	to nil too before posting the NSControlTextDidEndEditing
	notification.

2002-06-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSWorkspace.m: Fix error in testing base path for app.

Wed Jun 26 17:50:39 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSTextField.m ([-textDidEndEditing:]): Post the
	NSControlTextDidEndEditingNotification *after* we end editing, not
	before!
	* Source/NSMatrix.m ([-textDidEndEditing:]): Idem.
	* Source/NSTableView.m ([-textDidEndEditing:]): Idem.

2002-06-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSWorkspace.m: Comitted Jeffs latest attemtpt at handling
	lookup of apps by name correctly ... but rewritten somewhat to
	remove one assumption I thought was unwarrented, and to try to
	conform to what the MacOS-X implementation actually does rather
	than what the MacOS-X documentation says it should do.

Mon Jun 24 13:17:37 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	Originated by a patch/suggestion by Serg Stoyan
	<stoyan@on.com.ua>, rewritten by myself.
	* Source/GSSimpleLayoutManager.m (defaultFontHeight): New static
	inline function computing the height of the user font of the
	default size.
	([-boundingRectForGlyphRange:inTextContainer:]): Use
	defaultFontHeight() instead of hardcoded 12.
	([-lineFragmentRectForGlyphAtIndex:effectiveRange:]): Idem.
	([-rectForCharacterIndex:]): Idem.
	([-rebuildForRange:delta:inTextContainer:]): Idem.
	([-rebuildForRange:delta:inTextContainer:]): Idem.
	* Source/NSTextView.m
	([-updateInsertionPointStateAndRestartTimer:]): Removed unused
	code setting font size to 12 if it was 0.
		
Sat Jun 22 17:26:18 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSMenuView.m ([-itemAdded:]): Fixed highlighting of
	cells.

Sat Jun 22 16:46:59 2002  Nicola Pero  <n.pero@mi.flashnet.it>
